Fixed a bug on small screens

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,6 +2,11 @@
   .glyphiconMargin {
     margin-top:10px;
   }
+  
+  .fix-nav {
+    z-index: 999;
+  }
+
 }
 
 body {
